[package]
name = "starknet_address_checker"
version = "0.1.0"
edition = "2021"
authors = ["Josh_dfG"]
description = "A library that can be used to distinguish between starknet smart wallets and deployed smart contracts and also validate Starknet addresses if they are valid or not and also."
license = "MIT"

[dependencies]
starknet = "0.7.0"
async-trait = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
url = "2.0"
log = "0.4"
env_logger = "0.10"